<resources>
    <string name="app_name">灵通WiFi</string>
    <string name="alertdialog_title">灵通WiFi提示</string>

    <string name="tab_one">WiFi</string>
    <string name="tab_two">附近</string>
    <string name="tab_three">商品</string>
    <string name="tab_four">个人</string>


    <string name="connect_status_ok">已连接</string>
    <string name="status_has_connect">已连</string>
    <string name="connect">连接</string>
    <string name="sign_good">强</string>
    <string name="sign_normal">中</string>
    <string name="sign_bad">弱</string>
    <string name="connecting">连接中，请稍后...</string>
    <string name="connect_success">连接成功，可以免费上网了</string>
    <string name="no_wifi_msg">附近暂无可用wifi</string>


    <string name="pay_platfm">打赏给平台</string>
    <string name="pay_what">购买了%swifi使用</string>
    <string name="pay_success2">支付成功</string>
    <string name="pay_success">打赏成功,感谢您的支持！</string>
    <string name="pay_query_result">查询支付结果中，请稍后...</string>
    <string name="pay_get_order">下单中，请稍后...</string>
    <string name="show_goods_price">价格：%s元</string>

    <string name="login_phone_empty">请输入手机号</string>
    <string name="login_phone_error">请输入正确的手机号</string>
    <string name="login_psw_empty">请输入密码</string>
    <string name="login_sure_psw_empty">请确认密码</string>
    <string name="login_psw_not_equals">两次密码输入不一致</string>
    <string name="login_psw_error">密码错误</string>
    <string name="login_code_empty">请输入验证码</string>
    <string name="login_code_error">验证码错误</string>
    <string name="user_no_phone">该用户暂未预留电话</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>

    <string name="tag_register">注册</string>
    <string name="tag_sure">确定</string>
    <string name="tag_setting">设置</string>
    <string name="tag_cancle">取消</string>
    <string name="tag_waiting">请稍后...</string>

    <string name="perimmsion_refuse_phone_login">拒绝了读取设备信息权限，您将无法进行登录</string>
    <string name="perimmsion_refuse_phone_register">拒绝了读取设备信息权限，您将无法进行注册</string>
    <string name="perimmsion_refuse_call_phone">你拒绝了应用拨打电话权限，请前往设置开启</string>
    <string name="perimmsion_ask_gps">请打开GPS否则无法获取附近Wifi信息</string>
    <string name="perimmsion_ask_must">请同意应用必要权限，否则应用无法正常使用</string>
    <string name="perimmsion_ask_window">为给您提供更好的服务，请授予应用悬浮窗权限</string>

    <string name="addr_detail">详细地址：%s</string>

    <string name="no_content">啊哦，出错了</string>
    <string name="you_can_try">你可以尝试</string>
    <string name="reload">重新加载</string>
    <string name="up">收  起</string>
    <string name="down">展  开</string>
    <string name="login_load">登录中，请稍后...</string>
    <string name="regist_load">注册中，请稍后...</string>
    <string name="register"><Data><![CDATA[<font color="#666666">没有账号,&#8201;&#8201;</font><font color="#dbc12b"> 点此注册</font>]]></Data></string>
    <string name="listview_loading">正在加载&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新数据中...</string>
    <string name="xlistview_header_last_time">最后更新：</string>
    <string name="xlistview_footer_hint_normal">上拉可以加载更多</string>
    <string name="xlistview_footer_hint_ready">松开立即加载更多</string>
    <string name="xlistview_footer_hint_loading">正在加载更多的数据...</string>


    <string name="mine_foot">我的足迹</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_cheap">我的优惠劵</string>

    <string name="mine_item_account">账户管理</string>
    <string name="mine_item_message">信息中心</string>
    <string name="mine_item_mytask">我的任务</string>
    <string name="mine_item_shop">积分商城</string>
    <string name="mine_item_help">意见反馈</string>
    <string name="mine_item_join">我要加入</string>
    <string name="mine_item_share">分享灵通WiFi</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="mine_info_avatar">头像</string>
    <string name="mine_info_nickname">昵称</string>
    <string name="mine_info_address">地区</string>
    <string name="mine_info_title">个人信息</string>
    <string name="mine_info_save">保存</string>
    <string name="mine_info_default_address">暂无位置信息</string>
    <string name="mine_info_get_addressing">获取信息中，请稍后...</string>
    <string name="mine_info_saving">保存信息中，请稍后...</string>
    <string name="mine_info_no_addr">未获取到地址信息</string>
    <string name="mine_info_hint_name">昵称不能为空</string>
    <string name="mine_info_hint_avatar">请选择头像</string>
    <string name="mine_info_hint_address">请选择地址</string>
    <!--<string name="mine_info_map_address">%s-%s-%s</string>-->

    <string name="mine_join_title">我要加入</string>
    <string name="mine_join_name">姓名</string>
    <string name="mine_join_phone">电话</string>
    <string name="mine_join_shop_name">店铺名称</string>
    <string name="mine_join_addr">地址</string>
    <string name="mine_join_hint_name">请输入您的姓名</string>
    <string name="mine_join_hint_phone">请输入联系电话</string>
    <string name="mine_join_hint_shop_name">请输入店铺名称</string>
    <string name="mine_join_hint_addr">请输入店铺地址</string>

    <string name="submit">提交</string>
    <string name="loginout">退出登录</string>


    <string name="mine_join_empty_name">姓名不能为空</string>
    <string name="mine_join_empty_phone">请输入正确的电话号码</string>
    <string name="mine_join_empty_shop_name">店铺名称不能为空</string>
    <string name="mine_join_empty_addr">店铺地址不能为空</string>
    <string name="mine_join_submit_success">提交中，请稍后...</string>

    <string name="system_feedback_title">意见反馈。</string>
    <string name="system_feedback_input_hint">请输入您遇到的问题或建议。</string>
    <string name="system_feedback_input_hint_title">请输入主题。</string>
    <string name="system_feedback_input_limit">意见反馈最多只能输入200字</string>
    <string name="system_feedback_limit_hint">(最多可输入200字)</string>
    <string name="system_feedback_limit_hint_input">您还可以输入%1$d字</string>
    <string name="system_feedback_hint_content">请输入反馈内容</string>
    <string name="system_feedback_hint_title">请输入反馈主题</string>

    <string name="setting_close_msg">消息免打扰</string>
    <string name="setting_window">设置悬浮窗</string>

    <string name="msg_center_title">信息中心</string>
    <string name="msg_center_waiting">加载中，请稍后...</string>
    <string name="msg_save_info_success">保存信息成功</string>

</resources>
