<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/white_item_press"
        android:id="@+id/join_liner_name"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_high"
            android:text="@string/mine_join_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="14sp"
            android:maxLength="10"
            android:hint="@string/mine_join_hint_name"
            android:layout_marginLeft="10dp"
            android:background="@color/transparency"
            android:id="@+id/join_tv_name"
            android:textColor="@color/text_black_middle"
            android:text=""
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_black_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/white_item_press"
        android:id="@+id/join_liner_phone"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_high"
            android:text="@string/mine_join_phone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="right"
            android:id="@+id/join_tv_phone"
            android:maxLength="11"
            android:hint="@string/mine_join_hint_phone"
            android:inputType="phone"
            android:layout_marginLeft="10dp"
            android:background="@color/transparency"
            android:textColor="@color/text_black_middle"
            android:text=""
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_black_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/white_item_press"
        android:id="@+id/join_liner_shop_name"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_high"
            android:text="@string/mine_join_shop_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="right"
            android:maxLength="20"
            android:hint="@string/mine_join_hint_shop_name"
            android:layout_marginLeft="10dp"
            android:background="@color/transparency"
            android:id="@+id/join_tv_shop_name"
            android:textColor="@color/text_black_middle"
            android:text=""
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_black_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/white_item_press"
        android:id="@+id/join_liner_addr"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_high"
            android:text="@string/mine_join_addr"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="right"
            android:maxLength="20"
            android:hint="@string/mine_join_hint_addr"
            android:layout_marginLeft="10dp"
            android:background="@color/transparency"
            android:id="@+id/join_tv_addr"
            android:textColor="@color/text_black_middle"
            android:text=""
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_black_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparency"/>


    <Button
        android:id="@+id/join_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/seletor_main_green"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50dp"
        />
</LinearLayout>