<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title"/>
    <EditText
        android:id="@+id/feedback_et_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColorHint="@color/tv_gray"
        android:hint="@string/system_feedback_input_hint_title"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLength="20"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="14sp"
        android:background="@drawable/edit_black_border_bg"
        android:textColor="@color/text_black_high"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="@drawable/edit_black_border_bg"
        >

        <EditText
            android:id="@+id/feedback_et"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textColorHint="@color/tv_gray"
            android:hint="@string/system_feedback_input_hint"
            android:gravity="top"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="35dp"
            android:maxLength="200"
            android:textSize="14sp"
            android:textColor="@color/text_black_high"
            android:background="@color/transparency"
            />
        <TextView
            android:id="@+id/feed_back_tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/text_black_middle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/system_feedback_limit_hint"/>
    </RelativeLayout>
    <Button
        android:id="@+id/info_btn_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/seletor_main_green"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        />
</LinearLayout>  