<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="16dp"
        android:background="@drawable/white_item_press"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_close_msg"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_close_msg"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_black_high"/>

        <CheckBox
            android:id="@+id/setting_cb_msg"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:button="@null"
            android:checked="false"
            android:layout_marginRight="5dp"
            android:background="@drawable/checkbox_bg"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_black_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="16dp"
        android:id="@+id/menu_item_window"
        android:background="@drawable/white_item_press"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_window"
          />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_window"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_black_high"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_black_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparency"/>

    <Button
        android:id="@+id/info_btn_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/loginout"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/seletor_main_green"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50dp"
        />

</LinearLayout>