<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_below="@+id/top_bar"
              android:background="@color/background_main">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/main_appbar"
            android:background="@color/mainGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                <com.traffic.wifiapp.ui.view.RoundImageView
                    android:id="@+id/mine_avatar"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_app"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="26dp"
                    imagecontrol:border_outside_color="@color/white_bg"
                    imagecontrol:border_thickness="3dp"
                    />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    style="@style/MyToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="pin">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:text="灵通WiFi用户"
                        android:gravity="center"
                        app:layout_collapseMode="pin"
                        android:layout_gravity="bottom"
                        android:textColor="@color/white"
                        android:id="@+id/mine_username"/>
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/mainGreenBg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:background="@drawable/white_item_press"
                    android:paddingBottom="20dp"
                    android:id="@+id/mine_foot">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/foot"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/tv_gray"
                        android:text="@string/mine_foot"/>
                    </LinearLayout>
                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorBgAll"
                    android:layout_marginBottom="8dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:background="@drawable/white_item_press"
                    android:paddingBottom="20dp"
                    android:id="@+id/mine_collect">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/store"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/tv_gray"
                        android:text="@string/mine_collect"/>
                </LinearLayout>
                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorBgAll"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:background="@drawable/white_item_press"
                    android:paddingBottom="20dp"
                    android:id="@+id/mine_cheap">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/cheap"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/tv_gray"
                        android:text="@string/mine_cheap"/>
                </LinearLayout>
                </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/mainGreenBg"/>
        <android.support.v7.widget.RecyclerView
                android:id="@+id/mine_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mainGreenBg"
                />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>